--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     </head>
     <body>
 
+        <!-- NAVBAR -->
+            <nav class="navbar navbar-default navbar-fixed-top">
+                    <div class="container-fluid">
+                      <div class="navbar-header">
+                            <a class="navbar-brand"><img src=
+                                "IMG/pig.png" 
+                                    alt="Pig" border="0"></a>
+                      </div>
+                      <ul class="nav navbar-nav">
+                        <li class="active"><a href="index.html">About</a></li>
+                        <li class = "Play"><a href= "html/play.html"> Play </a></li>
+                      </ul>
+                    </div>
+                  </nav>
+        <!-- NAVBAR -->
+
+
         <!-- JAVA LINKS -->
         <script type="text/javascript" src="JS/jquery-3.3.1.js"></script>
         <script type="text/javascript" src="JS/styles.js"></script>
