made two page sections, edited section 1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,24 @@
                   </nav>
         <!-- NAVBAR -->
 
+        <!-- TITLE PAGE SECTION 1 -->
+        <div class = "container-fluid">
+            <div class = "jumbotron introduction">
+                <!-- <p><span class = "heading">Pig Dice</span></p> -->
+                <h1><span class = "title">PIG DICE</span></h1>
+                <p><span class = "credit">Designed by <span class = "name">Tinashe Osewe</span></span></p>
+                <center><img class = "bouncing" alt = "bouncing dice" src="IMG/bouncing-dice.gif"></center>
+            </div>
+        </div>
+        <!-- TITLE PAGE SECTION 1 -->
 
+        
+        <div class = "container-fluid">
+                <div class = "jumbotron animation">
+                    <h1>PIG DICE</h1>
+                </div>
+            </div>
+ 
         <!-- JAVA LINKS -->
         <script type="text/javascript" src="JS/jquery-3.3.1.js"></script>
         <script type="text/javascript" src="JS/styles.js"></script>
