removed commented html and css, created game div

--- a/index.html
+++ b/index.html
@@ -12,67 +12,25 @@
     <body>
 
         <!-- NAVBAR -->
-            <!-- <nav class="navbar navbar-default navbar-fixed-top">
-                    <div class="container-fluid">
-                      <div class="navbar-header">
-                            <a class="navbar-brand"><img src=
-                                "IMG/pig.png" 
-                                    alt="Pig" border="0"></a>
-                      </div>
-                      <ul class="nav navbar-nav">
-                        <li class="active"><a href="#section1">Home</a></li>
-                        <li class="About"><a href="#section2">About</a></li>
-                        <li class = "Play"><a href= "#secion3"> Play </a></li>
-                      </ul>
-                    </div>
-                  </nav> -->
-                  <div class="sidenav">
-                        <a href="#">History</a>
-                        <a href="#">Instructions</a>
-                        <a href="#">Contact</a>
-                      </div>
+            <div class="sidenav">
+                <a href="#">History</a>
+                <a href="#">Instructions</a>
+                <a href="#">Contact</a>
+            </div>
         <!-- NAVBAR -->
 
-        <!-- TITLE PAGE SECTION 1 -->
-        <section id = "section1">
+        <!-- CONTENT CONTAINER -->
             <div class = "container-fluid">
                 <div class = "container introduction">
-                    <!-- <p><span class = "heading">Pig Dice</span></p> -->
                     <h1><span class = "title">PIG DICE</span></h1>
                     <p><span class = "credit">Designed by <span class = "name">Tinashe Osewe</span></span></p>
                     <p></p>
-                    <!-- <center><img class = "bouncing" alt = "bouncing dice" src="IMG/bouncing-dice.gif"></center> -->
-                </div>
-            </div>
-        </section>
-        <!-- TITLE PAGE SECTION 1 -->
-<!-- SECTIONS UNECESSARY
-        SECTION 2
-        <section id = "section2">
-            <div class = "container-fluid">
-                    <div class = "jumbotron details">
-                        <div class = "description">
-                                <h1>History</h1>
-                                <p>Pig is a simple dice game first described in print by John Scarne in 1945. As with many games of folk origin, Pig is played with many rule variations. Commercial variants of Pig include Pass the Pigs, Pig Dice, and Skunk. Pig is commonly used by mathematics teachers to teach probability concepts. <br>
-            
-                                        Pig is one of a family of dice games described by Reiner Knizia as "jeopardy dice games". For jeopardy dice games, the dominant type of decision is whether or not to jeopardize previous gains by rolling for potential greater gains. Most jeopardy dice games can be further subdivided into two categories: jeopardy race games and jeopardy approach games. In jeopardy race games, the object is to be the first to meet or exceed a goal score (e.g. Pig, Pass the Pigs, Cosmic Wimpout, Can't Stop). In jeopardy approach games, the object is to most closely approach a goal score without exceeding it. <br>
-                                        <a href = "https://www.wikiwand.com/en/Pig_(dice_game)"><span class = "reference">Wiki</span></a>
-                                    </p>
-                        </div>
-                        <img class = "boar" alt = "boar in suit" src="IMG/boar.png">
+                    <div class = "game">
+                        
                     </div>
                 </div>
-        </section>
-        SECTION 2
-
-        SECION 3
-        <section id = "section3">
-
-
-
-
-        </section>
-        SECTION 3 -->
+            </div>
+        <!-- CONTENT CONTAINER -->
 
 <!-- JAVASCRIPT -->
     <!-- jQuery CDN -->
