--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
        <link href = "CSS/main.css" rel = "stylesheet" type = "text/css" >
        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-       <!-- <title>Title</title> -->
+       <title>Pig Dice</title>
+       <link href = "IMG/pig.png" rel="icon" type="image/gif">
        <!-- <link href = "IMG/icon.png" rel="icon" type="image/gif"> -->
     </head>
     <body>
