accidentally git added changes, committing is necessary. They are to be undone

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
        <link href = "CSS/main.css" rel = "stylesheet" type = "text/css" >
        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-       <title>Pig Dice</title>
-       <link href = "IMG/pig.png" rel="icon" type="image/gif">
+       <!-- <title>Title</title> -->
        <!-- <link href = "IMG/icon.png" rel="icon" type="image/gif"> -->
     </head>
     <body>
